Fixed signout button star to be more center aligned vertically.

--- a/src/components/SignoutButton/SignoutButton.module.css
+++ b/src/components/SignoutButton/SignoutButton.module.css
@@ -4,8 +4,9 @@
     width: 20px; 
     height: 24px;
     cursor: pointer;
-    margin-bottom: 10px;
-    margin-top: 20px;
+    margin-bottom: 15px;
+    margin-top: 17px;
+    vertical-align: middle;
     margin-right: 30px;
 }
 
@@ -20,8 +21,9 @@
     border: none;
     border-radius: 40px;
     cursor: pointer;
-    margin-bottom: 10px;
-    margin-top: 15px;
+    margin-bottom: 12px;
+    margin-top: 12px;
+    vertical-align: middle;
     margin-right: 15px;
 }
 
